--- a/events/2020/03/02/002.mdx
+++ b/events/2020/03/02/002.mdx
@@ -2,7 +2,7 @@
 slug: "medical-educator-day"
 title: "Medical Educator Day"
 datePublished: "2020/03/02"
-dateRange: [["2020/01/16"]]
+dateRange: [["2020/01/16", "2022/01/16"]]
 ---
 
 <!--- content start --->
