--- a/events/2024/08/14/001.mdx
+++ b/events/2024/08/14/001.mdx
@@ -2,7 +2,7 @@
 slug: "goldenstate-college-opening-of-classes"
 title: "Goldenstate College Opening of Classes"
 datePublished: "2024/08/14"
-dateRange: [["2024/08/12"]]
+dateRange: ["2024/08/12"]
 ---
 
 <!--- content start --->
