--- a/events/2024/08/14/002.mdx
+++ b/events/2024/08/14/002.mdx
@@ -2,7 +2,7 @@
 slug: "goldenstate-college-koronadal"
 title: "Goldenstate College Koronadal"
 datePublished: "2024/08/14"
-dateRange: [["2024/08/16"]]
+dateRange: ["2024/08/16"]
 ---
 
 <!--- content start --->
