--- a/events/2024/08/14/006.mdx
+++ b/events/2024/08/14/006.mdx
@@ -2,7 +2,7 @@
 slug: "goldenstate-college-gensan-buwan-ng-wika-culmination-program-lagao-campus"
 title: "Goldenstate College Gensan , Buwan Ng Wika Culmination Program , Lagao Campus"
 datePublished: "2024/08/14"
-dateRange: [["2024/08/30"]]
+dateRange: ["2024/08/30"]
 ---
 
 <!--- content start --->
