--- a/events/2024/10/29/002.mdx
+++ b/events/2024/10/29/002.mdx
@@ -2,7 +2,7 @@
 slug: "holiday-maulid-un-nabi"
 title: "Holiday (Maulid-Un-Nabi)"
 datePublished: "2024/10/29"
-dateRange: [["2024/09/16"]]
+dateRange: ["2024/09/16"]
 ---
 
 <!--- content start --->
