--- a/events/2024/10/29/007.mdx
+++ b/events/2024/10/29/007.mdx
@@ -2,7 +2,7 @@
 slug: "holiday-break"
 title: "Holiday Break"
 datePublished: "2024/10/29"
-dateRange: [["2024/10/28"]]
+dateRange: [["2024/10/28", "2024/11/02"]]
 ---
 
 <!--- content start --->
