--- a/events/2024/10/29/008.mdx
+++ b/events/2024/10/29/008.mdx
@@ -2,7 +2,7 @@
 slug: "all-saints-day"
 title: "All Saint’s Day"
 datePublished: "2024/10/29"
-dateRange: [["2024/11/01"]]
+dateRange: ["2024/11/01"]
 ---
 
 <!--- content start --->
