--- a/events/2024/10/29/009.mdx
+++ b/events/2024/10/29/009.mdx
@@ -2,7 +2,7 @@
 slug: "all-souls-day"
 title: "All Souls Day"
 datePublished: "2024/10/29"
-dateRange: [["2024/11/02"]]
+dateRange: ["2024/11/02"]
 ---
 
 <!--- content start --->
