--- a/events/2024/11/21/001.mdx
+++ b/events/2024/11/21/001.mdx
@@ -2,7 +2,7 @@
 slug: "legal-holiday"
 title: "Legal Holiday"
 datePublished: "2024/11/21"
-dateRange: []
+dateRange: ["2024/11/30"]
 ---
 
 <!--- content start --->
