--- a/events/2024/11/21/003.mdx
+++ b/events/2024/11/21/003.mdx
@@ -2,7 +2,7 @@
 slug: "final-exam"
 title: "Final Exam"
 datePublished: "2024/11/21"
-dateRange: []
+dateRange: [["2024/12/12", "2024/12/14"]]
 ---
 
 <!--- content start --->
