--- a/events/2025/01/28/001.mdx
+++ b/events/2025/01/28/001.mdx
@@ -2,7 +2,7 @@
 slug: "chinese-new-year"
 title: "Chinese New Year"
 datePublished: "2025/01/28"
-dateRange: [["2025/01/29"]]
+dateRange: ["2025/01/29"]
 ---
 
 <!--- content start --->
