--- a/events/2025/01/28/005.mdx
+++ b/events/2025/01/28/005.mdx
@@ -2,7 +2,7 @@
 slug: "hrm-skills"
 title: "Hrm Skills"
 datePublished: "2025/01/28"
-dateRange: [["2025/03/08"]]
+dateRange: ["2025/03/08"]
 ---
 
 <!--- content start --->
