--- a/events/2025/01/28/013.mdx
+++ b/events/2025/01/28/013.mdx
@@ -2,7 +2,7 @@
 slug: "graduation-college"
 title: "Graduation College"
 datePublished: "2025/01/28"
-dateRange: [["2025/05/03"]]
+dateRange: ["2025/05/03"]
 ---
 
 <!--- content start --->
