--- a/events/2020/03/09/001.mdx
+++ b/events/2020/03/09/001.mdx
@@ -2,7 +2,7 @@
 slug: "goldenstate-college-grand-alumni-homecoming-alert"
 title: "Goldenstate College Grand Alumni Homecoming Alert"
 datePublished: "2020/03/09"
-dateRange: [["2020/05/10"]]
+dateRange: ["2020/05/10", "2020/04/30", "2025/01/01"]
 ---
 
 <!--- content start --->
