--- a/events/2024/08/14/004.mdx
+++ b/events/2024/08/14/004.mdx
@@ -2,7 +2,7 @@
 slug: "holiday-ninoy-aquino-day"
 title: "(holiday) ninoy Aquino Day"
 datePublished: "2024/08/14"
-dateRange: [["2024/08/21"]]
+dateRange: ["2024/08/21"]
 ---
 
 <!--- content start --->
