--- a/events/2024/10/29/001.mdx
+++ b/events/2024/10/29/001.mdx
@@ -2,7 +2,7 @@
 slug: "prelim-examination"
 title: "Prelim Examination"
 datePublished: "2024/10/29"
-dateRange: [["2024/09/12", "2024/09/14"]]
+dateRange: ["2025/09/12"]
 ---
 
 <!--- content start --->
