--- a/events/2024/10/29/004.mdx
+++ b/events/2024/10/29/004.mdx
@@ -2,7 +2,7 @@
 slug: "8th-pin-investiture-white-coat-and-pinning-ceremony"
 title: "8th Pin Investiture White Coat and Pinning Ceremony"
 datePublished: "2024/10/29"
-dateRange: [["2024/10/04"]]
+dateRange: ["2024/10/04"]
 ---
 
 <!--- content start --->
