--- a/events/2024/10/29/005.mdx
+++ b/events/2024/10/29/005.mdx
@@ -2,7 +2,7 @@
 slug: "midterm-examination"
 title: "Midterm Examination"
 datePublished: "2024/10/29"
-dateRange: [["2024/10/14", "2024/10/16"]]
+dateRange: ["2025/10/14"]
 ---
 
 <!--- content start --->
