--- a/events/2024/10/29/006.mdx
+++ b/events/2024/10/29/006.mdx
@@ -2,7 +2,7 @@
 slug: "fire-and-earthquake-drill"
 title: "Fire and Earthquake Drill"
 datePublished: "2024/10/29"
-dateRange: [["2024/10/18"]]
+dateRange: ["2024/10/18"]
 ---
 
 <!--- content start --->
