--- a/events/2024/10/29/011.mdx
+++ b/events/2024/10/29/011.mdx
@@ -2,7 +2,7 @@
 slug: "goldenstate-college-intramurals-opening-parade"
 title: "Goldenstate College Intramurals Opening (Parade)"
 datePublished: "2024/10/29"
-dateRange: [["2024/11/08"]]
+dateRange: ["2024/11/08"]
 ---
 
 <!--- content start --->
