--- a/events/2024/11/21/002.mdx
+++ b/events/2024/11/21/002.mdx
@@ -2,7 +2,7 @@
 slug: "non-working-holiday"
 title: "Non-Working Holiday"
 datePublished: "2024/11/21"
-dateRange: []
+dateRange: ["2024/12/08"]
 ---
 
 <!--- content start --->
