--- a/events/2025/01/28/003.mdx
+++ b/events/2025/01/28/003.mdx
@@ -2,7 +2,7 @@
 slug: "edsa-revolution-anniv"
 title: "Edsa Revolution Anniv"
 datePublished: "2025/01/28"
-dateRange: [["2025/02/25"]]
+dateRange: ["2025/02/25"]
 ---
 
 <!--- content start --->
