--- a/events/2025/01/28/012.mdx
+++ b/events/2025/01/28/012.mdx
@@ -2,7 +2,7 @@
 slug: "graduation-shs"
 title: "Graduation Shs"
 datePublished: "2025/01/28"
-dateRange: [["2025/05/02"]]
+dateRange: ["2025/05/02"]
 ---
 
 <!--- content start --->
