--- a/events/2020/03/02/002.mdx
+++ b/events/2020/03/02/002.mdx
@@ -1,14 +1,27 @@
 ---
 slug: "medical-educator-day"
 title: "Medical Educator Day"
-datePublished: "2020/03/02"
-dateRange: [["2020/01/16", "2022/01/16"]]
+datePublished: "2020-03-02"
+dateRange: ["2020-01-16"]
 ---
 
 <!--- content start --->
 
 Medical Educator Day
+
 January 16, 2020 – January 16, 2022
+
+Phasellus viverra nulla ut metus varius laoreet
+
 Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.Donec sodales sagittis magna.
+
+ 
+
+EVENT INFO :
+Start Date:January 16, 2020
+Start Time:07:30
+End Date:January 16, 2022
+End Time:17:30
+Number of Participants:100
 
 <!--- content end --->
