--- a/events/2020/03/02/003.mdx
+++ b/events/2020/03/02/003.mdx
@@ -1,12 +1,19 @@
 ---
 slug: "final-examinations-of-graduating-students-college"
 title: "Final Examinations of Graduating Students (College)"
-datePublished: "2020/03/02"
-dateRange: []
+datePublished: "2020-03-02"
+dateRange: [["2020-03-16", "2020-03-17"]]
 ---
 
 <!--- content start --->
 
 Final Examinations of Graduating Students – c/o College Deans
+
+EVENT INFO :
+Start Date:March 16, 2020
+Start Time:07:30
+End Date:March 17, 2020
+End Time:17:30
+Number of Participants:100
 
 <!--- content end --->
