--- a/events/2020/03/02/004.mdx
+++ b/events/2020/03/02/004.mdx
@@ -1,10 +1,18 @@
 ---
 slug: "pgs-2-culmination-night"
 title: "Pgs 2 Culmination Night"
-datePublished: "2020/03/02"
-dateRange: []
+datePublished: "2020-03-02"
+dateRange: ["2020-03-14"]
 ---
 
 <!--- content start --->
+
+PGS 2 Culmination Night – c/o Guidance and Testing Center Office
+EVENT INFO :
+Start Date:March 14, 2020
+Start Time:07:30
+End Date:March 14, 2020
+End Time:17:30
+Number of Participants:2000
 
 <!--- content end --->
