--- a/events/2020/03/02/006.mdx
+++ b/events/2020/03/02/006.mdx
@@ -1,10 +1,18 @@
 ---
 slug: "goldenstate-college-22nd-commencement-exercises"
 title: "Goldenstate College 22nd Commencement Exercises"
-datePublished: "2020/03/02"
-dateRange: []
+datePublished: "2020-03-02"
+dateRange: ["2020-03-14"]
 ---
 
 <!--- content start --->
+
+EVENT INFO :
+Start Date:March 14, 2020
+Start Time:07:30
+End Date:March 14, 2020
+End Time:17:30
+Number of Participants:2000
+Location:Lagao Gymnasium
 
 <!--- content end --->
