--- a/events/2020/03/09/001.mdx
+++ b/events/2020/03/09/001.mdx
@@ -1,15 +1,20 @@
 ---
 slug: "goldenstate-college-grand-alumni-homecoming-alert"
 title: "Goldenstate College Grand Alumni Homecoming Alert"
-datePublished: "2020/03/09"
-dateRange: ["2020/05/10", "2020/04/30", "2025/01/01"]
+datePublished: "2020-03-09"
+dateRange: ["2020-05-10", "2020-04-30", "2025-01-01"]
 ---
 
 <!--- content start --->
 
 You, yes you, our dear fledgling. Don’t you miss your alma mater, don’t you miss the good ol’ days, the day you first stepped past the school’s glass facade, walked its hallways, and asked where to go to have yourself enrolled. Do you still remember the friends you made along the way, the teachers you loved and the ones you hated. It’s sad to know that all things must come to an end. But worry not, ’cause it’s that time of the year again! Goldenian Alumni, let’s gather once more, reminisce and tell our stories.
+
 If you want to party with us in this grand event on May 10, 2020, then,look for Ms. Maria Lou Sericon at Goldenstate College’ s main campus. There shall be a Php 500. 00 Registraion fee already inclusive of lunch deadline of payment shall only be until April 30, 2020. You can also buy a special limited-time only shirt at the party’s venue.
+
 Gather also your Class divas, kings, and dancers represent! Tons of prizes also await you in this year’s singing and dance contest!
-It’s gonna be a day of fun every Goldenian shouldn’t miss! For further inquiries and additional details, pls message Ms. Berlyn Sumagaysay through Facebook messenger. See you there!
+
+It’s gonna be a day of fun every Goldenian shouldn’t miss!
+For further inquiries and additional details, pls message Ms. Berlyn Sumagaysay through Facebook messenger.
+See you there!
 
 <!--- content end --->
