--- a/events/2024/08/14/003.mdx
+++ b/events/2024/08/14/003.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "goldenstate-college-gensan-student-orientation-at-goldenstate-college-lagao-campus"
 title: "Goldenstate College Gensan , Student Orientation at Goldenstate College , Lagao Campus"
-datePublished: "2024/08/14"
-dateRange: [["2024/08/19", "2024/08/20"]]
+datePublished: "2024-08-14"
+dateRange: [["2024-08-19", "2024-08-20"]]
 ---
 
 <!--- content start --->
