--- a/events/2024/08/14/005.mdx
+++ b/events/2024/08/14/005.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "holiday-philippine-national-heroes-day"
 title: "(holiday) philippine National Heroes Day"
-datePublished: "2024/08/14"
-dateRange: ["2024/08/26"]
+datePublished: "2024-08-14"
+dateRange: ["2024-08-26"]
 ---
 
 <!--- content start --->
