--- a/events/2024/08/14/007.mdx
+++ b/events/2024/08/14/007.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "tuna-festival-skills-olympics-2024-at-veranza-mall-gensan"
 title: "Tuna Festival Skills Olympics 2024 at Veranza Mall, Gensan"
-datePublished: "2024/08/14"
-dateRange: [["2024/09/03", "2024/09/04"]]
+datePublished: "2024-08-14"
+dateRange: [["2024-09-03", "2024-09-04"]]
 ---
 
 <!--- content start --->
