--- a/events/2024/10/29/001.mdx
+++ b/events/2024/10/29/001.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "prelim-examination"
 title: "Prelim Examination"
-datePublished: "2024/10/29"
-dateRange: ["2025/09/12"]
+datePublished: "2024-10-29"
+dateRange: ["2025-09-12"]
 ---
 
 <!--- content start --->
