--- a/events/2024/10/29/006.mdx
+++ b/events/2024/10/29/006.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "fire-and-earthquake-drill"
 title: "Fire and Earthquake Drill"
-datePublished: "2024/10/29"
-dateRange: ["2024/10/18"]
+datePublished: "2024-10-29"
+dateRange: ["2024-10-18"]
 ---
 
 <!--- content start --->
