--- a/events/2024/10/29/011.mdx
+++ b/events/2024/10/29/011.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "goldenstate-college-intramurals-opening-parade"
 title: "Goldenstate College Intramurals Opening (Parade)"
-datePublished: "2024/10/29"
-dateRange: ["2024/11/08"]
+datePublished: "2024-10-29"
+dateRange: ["2024-11-08"]
 ---
 
 <!--- content start --->
