--- a/events/2025/01/28/011.mdx
+++ b/events/2025/01/28/011.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "final-exam-undergrad"
 title: "Final Exam-Undergrad"
-datePublished: "2025/01/28"
-dateRange: [["2025/04/27", "2025/04/29"]]
+datePublished: "2025-01-28"
+dateRange: [["2025-04-27", "2025-04-29"]]
 ---
 
 <!--- content start --->
