--- a/events/2024/08/14/002.mdx
+++ b/events/2024/08/14/002.mdx
@@ -1,13 +1,14 @@
 ---
 slug: "goldenstate-college-koronadal"
 title: "Goldenstate College Koronadal"
-datePublished: "2024/08/14"
-dateRange: ["2024/08/16"]
+datePublished: "2024-08-14"
+dateRange: ["2024-08-16"]
 ---
 
 <!--- content start --->
 
 Aug 16, 2024 – Goldenstate College Koronadal
+
 Student Orientation at South Cotabato Gymnasium and Cultural Events.
 
 <!--- content end --->
