--- a/events/2024/08/14/006.mdx
+++ b/events/2024/08/14/006.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "goldenstate-college-gensan-buwan-ng-wika-culmination-program-lagao-campus"
 title: "Goldenstate College Gensan , Buwan Ng Wika Culmination Program , Lagao Campus"
-datePublished: "2024/08/14"
-dateRange: ["2024/08/30"]
+datePublished: "2024-08-14"
+dateRange: ["2024-08-30"]
 ---
 
 <!--- content start --->
