--- a/events/2024/10/29/002.mdx
+++ b/events/2024/10/29/002.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "holiday-maulid-un-nabi"
 title: "Holiday (Maulid-Un-Nabi)"
-datePublished: "2024/10/29"
-dateRange: ["2024/09/16"]
+datePublished: "2024-10-29"
+dateRange: ["2024-09-16"]
 ---
 
 <!--- content start --->
