--- a/events/2024/10/29/003.mdx
+++ b/events/2024/10/29/003.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "goldenstate-college-teachers-day-celebration"
 title: "Goldenstate College Teacher’s Day Celebration"
-datePublished: "2024/10/29"
-dateRange: ["2024/10/03"]
+datePublished: "2024-10-29"
+dateRange: ["2024-10-03"]
 ---
 
 <!--- content start --->
