--- a/events/2024/10/29/005.mdx
+++ b/events/2024/10/29/005.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "midterm-examination"
 title: "Midterm Examination"
-datePublished: "2024/10/29"
-dateRange: ["2025/10/14"]
+datePublished: "2024-10-29"
+dateRange: ["2025-10-14"]
 ---
 
 <!--- content start --->
