--- a/events/2024/10/29/010.mdx
+++ b/events/2024/10/29/010.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "back-to-school-office-resume"
 title: "Back to School & Office Resume"
-datePublished: "2024/10/29"
-dateRange: ["2024/11/04"]
+datePublished: "2024-10-29"
+dateRange: ["2024-11-04"]
 ---
 
 <!--- content start --->
