--- a/events/2024/10/29/012.mdx
+++ b/events/2024/10/29/012.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "goldenstate-college-gensan-intramurals-2024"
 title: "Goldenstate College Gensan Intramurals 2024"
-datePublished: "2024/10/29"
-dateRange: [["2024/11/11", "2024/11/15"]]
+datePublished: "2024-10-29"
+dateRange: [["2024-11-11", "2024-11-15"]]
 ---
 
 <!--- content start --->
