--- a/events/2024/11/21/001.mdx
+++ b/events/2024/11/21/001.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "legal-holiday"
 title: "Legal Holiday"
-datePublished: "2024/11/21"
-dateRange: ["2024/11/30"]
+datePublished: "2024-11-21"
+dateRange: ["2024-11-30"]
 ---
 
 <!--- content start --->
