--- a/events/2024/11/21/003.mdx
+++ b/events/2024/11/21/003.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "final-exam"
 title: "Final Exam"
-datePublished: "2024/11/21"
-dateRange: [["2024/12/12", "2024/12/14"]]
+datePublished: "2024-11-21"
+dateRange: [["2024-12-12", "2024-12-14"]]
 ---
 
 <!--- content start --->
