--- a/events/2025/01/28/001.mdx
+++ b/events/2025/01/28/001.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "chinese-new-year"
 title: "Chinese New Year"
-datePublished: "2025/01/28"
-dateRange: ["2025/01/29"]
+datePublished: "2025-01-28"
+dateRange: ["2025-01-29"]
 ---
 
 <!--- content start --->
