--- a/events/2025/01/28/002.mdx
+++ b/events/2025/01/28/002.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "prelim-exam"
 title: "Prelim Exam"
-datePublished: "2025/01/28"
-dateRange: [["2025/02/10", "2025/02/11"]]
+datePublished: "2025-01-28"
+dateRange: [["2025-02-10", "2025-02-11"]]
 ---
 
 <!--- content start --->
