--- a/events/2025/01/28/003.mdx
+++ b/events/2025/01/28/003.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "edsa-revolution-anniv"
 title: "Edsa Revolution Anniv"
-datePublished: "2025/01/28"
-dateRange: ["2025/02/25"]
+datePublished: "2025-01-28"
+dateRange: ["2025-02-25"]
 ---
 
 <!--- content start --->
