--- a/events/2025/01/28/004.mdx
+++ b/events/2025/01/28/004.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "gensan-foundation"
 title: "Gensan Foundation"
-datePublished: "2025/01/28"
-dateRange: ["2025/02/27"]
+datePublished: "2025-01-28"
+dateRange: ["2025-02-27"]
 ---
 
 <!--- content start --->
