--- a/events/2025/01/28/006.mdx
+++ b/events/2025/01/28/006.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "college-week"
 title: "College Week"
-datePublished: "2025/01/28"
-dateRange: [["2025/03/10", "2025/03/14"]]
+datePublished: "2025-01-28"
+dateRange: [["2025-03-10", "2025-03-14"]]
 ---
 
 <!--- content start --->
