--- a/events/2025/01/28/007.mdx
+++ b/events/2025/01/28/007.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "semi-final-exam"
 title: "Semi Final Exam"
-datePublished: "2025/01/28"
-dateRange: [["2025/03/20", "2025/03/22"]]
+datePublished: "2025-01-28"
+dateRange: [["2025-03-20", "2025-03-22"]]
 ---
 
 <!--- content start --->
