--- a/events/2025/01/28/008.mdx
+++ b/events/2025/01/28/008.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "araw-ng-kagitingan"
 title: "Araw Ng Kagitingan"
-datePublished: "2025/01/28"
-dateRange: ["2025/04/09"]
+datePublished: "2025-01-28"
+dateRange: ["2025-04-09"]
 ---
 
 <!--- content start --->
