--- a/events/2025/01/28/009.mdx
+++ b/events/2025/01/28/009.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "final-exam-graduating"
 title: "Final Exam-Graduating"
-datePublished: "2025/01/28"
-dateRange: [["2025/04/10", "2025/04/12"]]
+datePublished: "2025-01-28"
+dateRange: [["2025-04-10", "2025-04-12"]]
 ---
 
 <!--- content start --->
