--- a/events/2025/01/28/010.mdx
+++ b/events/2025/01/28/010.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "holy-week"
 title: "Holy Week"
-datePublished: "2025/01/28"
-dateRange: [["2025/04/17", "2025/04/19"]]
+datePublished: "2025-01-28"
+dateRange: [["2025-04-17", "2025-04-19"]]
 ---
 
 <!--- content start --->
