--- a/events/2025/01/28/013.mdx
+++ b/events/2025/01/28/013.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "graduation-college"
 title: "Graduation College"
-datePublished: "2025/01/28"
-dateRange: ["2025/05/03"]
+datePublished: "2025-01-28"
+dateRange: ["2025-05-03"]
 ---
 
 <!--- content start --->
