--- a/events/2025/01/28/014.mdx
+++ b/events/2025/01/28/014.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "enrollment-period-first-sem-sy-2025-2026"
 title: "Enrollment Period First Sem Sy 2025-2026"
-datePublished: "2025/01/28"
-dateRange: [["2025/06/02", "2025/06/24"]]
+datePublished: "2025-01-28"
+dateRange: [["2025-06-02", "2025-06-24"]]
 ---
 
 <!--- content start --->
