--- a/events/2025/01/28/015.mdx
+++ b/events/2025/01/28/015.mdx
@@ -1,8 +1,8 @@
 ---
 slug: "classes-begin-1st-sem-sy-2025-2026"
 title: "Classes Begin 1st Sem Sy 2025-2026"
-datePublished: "2025/01/28"
-dateRange: ["2025/06/25"]
+datePublished: "2025-01-28"
+dateRange: ["2025-06-25"]
 ---
 
 <!--- content start --->
