--- a/events/2020/03/02/003.mdx
+++ b/events/2020/03/02/003.mdx
@@ -1,19 +1,17 @@
 ---
-slug: "final-examinations-of-graduating-students-college"
-title: "Final Examinations of Graduating Students (College)"
+slug: "goldenstate-college-jobs-fair-2020"
+title: "Goldenstate College Jobs Fair 2020"
 datePublished: "2020-03-02"
-dateRange: [["2020-03-16", "2020-03-17"]]
+dateRange: ["2020-03-06"]
 ---
 
 <!--- content start --->
 
-Final Examinations of Graduating Students – c/o College Deans
+Goldenstate College Jobs Fair 2020
 
-EVENT INFO :
-Start Date:March 16, 2020
-Start Time:07:30
-End Date:March 17, 2020
-End Time:17:30
-Number of Participants:100
+📍 Venue: KCC Convention Center
+📅 Date: March 6, 2020 (Saturday)
+🕢 Time: 7:30 AM – 5:30 PM
+👥 Expected Participants: 2,000+
 
 <!--- content end --->
