--- a/events/2020/03/02/004.mdx
+++ b/events/2020/03/02/004.mdx
@@ -1,18 +1,17 @@
 ---
-slug: "pgs-2-culmination-night"
-title: "Pgs 2 Culmination Night"
+slug: "goldenstate-college-22nd-commencement-exercises"
+title: "Goldenstate College 22nd Commencement Exercises"
 datePublished: "2020-03-02"
 dateRange: ["2020-03-14"]
 ---
 
 <!--- content start --->
 
-PGS 2 Culmination Night – c/o Guidance and Testing Center Office
-EVENT INFO :
-Start Date:March 14, 2020
-Start Time:07:30
-End Date:March 14, 2020
-End Time:17:30
-Number of Participants:2000
+Goldenstate College 22nd Commencement Exercises
+
+📍 Location: Lagao Gymnasium
+🗓️ Date: March 14, 2020 (Saturday)
+🕢 Time: 7:30 AM – 5:30 PM
+👥 Expected Participants: 2,000+
 
 <!--- content end --->
