--- a/events/2020/03/09/001.mdx
+++ b/events/2020/03/09/001.mdx
@@ -1,20 +1,36 @@
 ---
 slug: "goldenstate-college-grand-alumni-homecoming-alert"
-title: "Goldenstate College Grand Alumni Homecoming Alert"
+title: "Goldenstate College: Grand Alumni Homecoming Alert!"
 datePublished: "2020-03-09"
-dateRange: ["2020-05-10", "2020-04-30", "2025-01-01"]
+dateRange: ["2020-05-10"]
 ---
 
 <!--- content start --->
 
-You, yes you, our dear fledgling. Don’t you miss your alma mater, don’t you miss the good ol’ days, the day you first stepped past the school’s glass facade, walked its hallways, and asked where to go to have yourself enrolled. Do you still remember the friends you made along the way, the teachers you loved and the ones you hated. It’s sad to know that all things must come to an end. But worry not, ’cause it’s that time of the year again! Goldenian Alumni, let’s gather once more, reminisce and tell our stories.
+“Once a Goldenian, always a Goldenian.”
 
-If you want to party with us in this grand event on May 10, 2020, then,look for Ms. Maria Lou Sericon at Goldenstate College’ s main campus. There shall be a Php 500. 00 Registraion fee already inclusive of lunch deadline of payment shall only be until April 30, 2020. You can also buy a special limited-time only shirt at the party’s venue.
+Dear Goldenian,
+It’s been a while, hasn’t it?
 
-Gather also your Class divas, kings, and dancers represent! Tons of prizes also await you in this year’s singing and dance contest!
+Do you ever catch yourself thinking about the old days—walking past the glass facade of Goldenstate College for the first time, nervously asking where to enroll, finding your way through the hallways that would soon feel like home?
+Do you remember the friendships that blossomed in between classes, the laughter, the heartbreaks, the unforgettable moments? The teachers who shaped you—some you admired, others you tolerated—but all of them part of your story.
 
-It’s gonna be a day of fun every Goldenian shouldn’t miss!
-For further inquiries and additional details, pls message Ms. Berlyn Sumagaysay through Facebook messenger.
-See you there!
+Well, this is your invitation to come home.
+
+On May 10, 2020, we’re opening our doors and hearts once again for the Grand Alumni Homecoming at Goldenstate College. It’s more than just a party—it’s a reunion of stories, smiles, and Goldenian pride.
+
+🟡 Registration Fee: ₱500 (includes lunch)
+📍 Venue: Goldenstate College – Main Campus
+📅 Deadline of Payment: April 30, 2020
+👕 Limited-edition shirts will also be available at the venue!
+
+Bring your batchmates, your class divas, kings, dancers—this is your time to shine again! Join the singing and dance contests for a chance to win exciting prizes and relive the fun of your college days.
+
+Let’s fill the campus once more with familiar laughter, music, and memories. Let’s come home.
+
+For questions or more info, feel free to message Ms. Berlyn Sumagaysay on Facebook Messenger.
+To register, look for Ms. Maria Lou Sericon at the Main Campus.
+
+See you soon, Goldenian. Your story continues—right where it all began.
 
 <!--- content end --->
