--- a/events/2024/08/14/001.mdx
+++ b/events/2024/08/14/001.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "goldenstate-college-opening-of-classes"
-title: "Goldenstate College Opening of Classes"
+slug: "start-of-classes-first-semester-2024-2025"
+title: "Start of Classes First Semester 2024-2025"
 datePublished: "2024-08-14"
 dateRange: ["2024-08-12"]
 ---
 
 <!--- content start --->
 
-Aug. 12, 2024 – Goldenstate College Opening of Classes
+Aug 12, 2024 – Start of Classes First Semester 2024-2025
 
 <!--- content end --->
