--- a/events/2024/08/14/002.mdx
+++ b/events/2024/08/14/002.mdx
@@ -1,14 +1,12 @@
 ---
-slug: "goldenstate-college-koronadal"
-title: "Goldenstate College Koronadal"
+slug: "student-orientation-2024-koronadal-campus"
+title: "Student Orientation 2024 - Koronadal Campus"
 datePublished: "2024-08-14"
 dateRange: ["2024-08-16"]
 ---
 
 <!--- content start --->
 
-Aug 16, 2024 – Goldenstate College Koronadal
-
-Student Orientation at South Cotabato Gymnasium and Cultural Events.
+Aug 16, 2024 – Goldenstate College Student Orientation 2024 at South Cotabato Gymnasium and Cultural Center
 
 <!--- content end --->
