--- a/events/2024/08/14/003.mdx
+++ b/events/2024/08/14/003.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "goldenstate-college-gensan-student-orientation-at-goldenstate-college-lagao-campus"
-title: "Goldenstate College Gensan , Student Orientation at Goldenstate College , Lagao Campus"
+slug: "student-orientation-2024-gsc-campus"
+title: "Student Orientation 2024 - Gsc Campus"
 datePublished: "2024-08-14"
 dateRange: [["2024-08-19", "2024-08-20"]]
 ---
 
 <!--- content start --->
 
-Aug. 19-20, 2024 – Goldenstate College Gensan – Student Orientation at Goldenstate College – Lagao Campus
+Aug 19-20, 2024 – Goldenstate College Student Orientation 2024 at Goldenstate College Lagao Campus, General Santos City
 
 <!--- content end --->
