--- a/events/2024/08/14/004.mdx
+++ b/events/2024/08/14/004.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "holiday-ninoy-aquino-day"
-title: "(holiday) ninoy Aquino Day"
+slug: "ninoy-aquino-day-holiday"
+title: "Ninoy Aquino Day (Holiday)"
 datePublished: "2024-08-14"
 dateRange: ["2024-08-21"]
 ---
 
 <!--- content start --->
 
-Aug. 21, 2024 – (HOLIDAY) NINOY AQUINO DAY
+Aug 21, 2024 – Ninoy Aquino Day (Holiday)
 
 <!--- content end --->
