--- a/events/2024/08/14/005.mdx
+++ b/events/2024/08/14/005.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "holiday-philippine-national-heroes-day"
-title: "(holiday) philippine National Heroes Day"
+slug: "national-heroes-day-regular-holiday"
+title: "National Heroes Day (Regular Holiday)"
 datePublished: "2024-08-14"
 dateRange: ["2024-08-26"]
 ---
 
 <!--- content start --->
 
-Aug. 26, 2024 – (HOLIDAY) PHILIPPINE NATIONAL HEROES DAY
+Aug 26, 2024 – National Heroes Day (Regular Holiday)
 
 <!--- content end --->
