--- a/events/2024/08/14/007.mdx
+++ b/events/2024/08/14/007.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "tuna-festival-skills-olympics-2024-at-veranza-mall-gensan"
-title: "Tuna Festival Skills Olympics 2024 at Veranza Mall, Gensan"
+slug: "skills-olympics-2024-tuna-festival"
+title: "Skills Olympics 2024 - Tuna Festival"
 datePublished: "2024-08-14"
 dateRange: [["2024-09-03", "2024-09-04"]]
 ---
 
 <!--- content start --->
 
-Sept. 3-4, 2024 – TUNA FESTIVAL SKILLS OLYMPICS 2024 at Veranza Mall, GENSAN
+Sept 3-4, 2024 – Tuna Festival Skills Olympics 2024 at Veranza Mall, General Santos City
 
 <!--- content end --->
