--- a/events/2024/10/29/001.mdx
+++ b/events/2024/10/29/001.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "prelim-examination"
-title: "Prelim Examination"
+slug: "maulid-un-nabi-muslim-holiday"
+title: "Maulid Un-Nabi (Muslim Holiday)"
 datePublished: "2024-10-29"
-dateRange: ["2025-09-12"]
+dateRange: ["2024-09-16"]
 ---
 
 <!--- content start --->
 
-SEPT. 12, 13 & 14, 2024 – PRELIM EXAMINATION
+Sept 16, 2024 – Maulid un-Nabi (Muslim Holiday)
 
 <!--- content end --->
