--- a/events/2024/10/29/002.mdx
+++ b/events/2024/10/29/002.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "holiday-maulid-un-nabi"
-title: "Holiday (Maulid-Un-Nabi)"
+slug: "teachers-day-celebration"
+title: "Teacher's Day Celebration"
 datePublished: "2024-10-29"
-dateRange: ["2024-09-16"]
+dateRange: ["2024-10-03"]
 ---
 
 <!--- content start --->
 
-SEPT. 16, 2024 – HOLIDAY (MAULID-UN-NABI)
+Oct 3, 2024 – Teacher's Day Celebration
 
 <!--- content end --->
