--- a/events/2024/10/29/003.mdx
+++ b/events/2024/10/29/003.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "goldenstate-college-teachers-day-celebration"
-title: "Goldenstate College Teacher’s Day Celebration"
+slug: "8th-investiture-white-coat-and-pinning-ceremony"
+title: "8th Investiture: White Coat and Pinning Ceremony"
 datePublished: "2024-10-29"
-dateRange: ["2024-10-03"]
+dateRange: ["2024-10-04"]
 ---
 
 <!--- content start --->
 
-OCT. 03, 2024 – GOLDENSTATE COLLEGE TEACHER’S DAY CELEBRATION
+Oct 4, 2024 – 8th Investiture: White Coat and Pinning Ceremony
 
 <!--- content end --->
