--- a/events/2024/10/29/005.mdx
+++ b/events/2024/10/29/005.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "midterm-examination"
-title: "Midterm Examination"
+slug: "fire-earthquake-drill"
+title: "Fire & Earthquake Drill"
 datePublished: "2024-10-29"
-dateRange: ["2025-10-14"]
+dateRange: ["2024-10-18"]
 ---
 
 <!--- content start --->
 
-OCT. 14,15,16, 2024 – MIDTERM EXAMINATION
+Oct 18, 2024 – Fire & Earthquake Drill
 
 <!--- content end --->
