--- a/events/2024/10/29/006.mdx
+++ b/events/2024/10/29/006.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "fire-and-earthquake-drill"
-title: "Fire and Earthquake Drill"
+slug: "semestral-break"
+title: "Semestral Break"
 datePublished: "2024-10-29"
-dateRange: ["2024-10-18"]
+dateRange: [["2024-10-28", "2024-11-02"]]
 ---
 
 <!--- content start --->
 
-OCT. 18, 2024 – FIRE AND EARTHQUAKE DRILL
+Oct 28 - Nov 2, 2024 – Semestral Break
 
 <!--- content end --->
