--- a/events/2024/10/29/007.mdx
+++ b/events/2024/10/29/007.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "holiday-break"
-title: "Holiday Break"
+slug: "all-saints-day"
+title: "All Saint's Day"
 datePublished: "2024-10-29"
-dateRange: [["2024-10-28", "2024-11-02"]]
+dateRange: ["2024-11-01"]
 ---
 
 <!--- content start --->
 
-OCT. 28 – NOV. 02, 2024 – HOLIDAY BREAK
+Nov 1, 2024 – All Saint's Day
 
 <!--- content end --->
