--- a/events/2024/10/29/008.mdx
+++ b/events/2024/10/29/008.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "all-saints-day"
-title: "All Saint’s Day"
+slug: "all-souls-day"
+title: "All Soul's Day"
 datePublished: "2024-10-29"
-dateRange: ["2024-11-01"]
+dateRange: ["2024-11-02"]
 ---
 
 <!--- content start --->
 
-NOV. 01, 2024 – ALL SAINT’S DAY
+Nov 2, 2024 – All Soul's Day
 
 <!--- content end --->
