--- a/events/2024/10/29/011.mdx
+++ b/events/2024/10/29/011.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "goldenstate-college-intramurals-opening-parade"
-title: "Goldenstate College Intramurals Opening (Parade)"
+slug: "intramurals-2024"
+title: "Intramurals 2024"
 datePublished: "2024-10-29"
-dateRange: ["2024-11-08"]
+dateRange: [["2024-11-11", "2024-11-15"]]
 ---
 
 <!--- content start --->
 
-NOV. 08, 2024 – GOLDENSTATE COLLEGE INTRAMURALS OPENING (PARADE)
+Nov 11-15, 2024 – Intramurals 2024
 
 <!--- content end --->
