--- a/events/2024/11/21/001.mdx
+++ b/events/2024/11/21/001.mdx
@@ -7,6 +7,6 @@ dateRange: ["2024-11-30"]
 
 <!--- content start --->
 
-Legal Holiday – November 30, 2024
+Nov 30, 2024 – Legal Holiday
 
 <!--- content end --->
