--- a/events/2024/11/21/002.mdx
+++ b/events/2024/11/21/002.mdx
@@ -7,6 +7,6 @@ dateRange: ["2024-12-08"]
 
 <!--- content start --->
 
-Non-working Holiday – December 8, 2024
+Dec 8, 2024 – Non-working Holiday
 
 <!--- content end --->
