--- a/events/2024/11/21/003.mdx
+++ b/events/2024/11/21/003.mdx
@@ -7,6 +7,6 @@ dateRange: [["2024-12-12", "2024-12-14"]]
 
 <!--- content start --->
 
-Final Exam – December 12-14, 2024
+Dec 12-14, 2024 – Final Exam
 
 <!--- content end --->
