--- a/events/2025/01/28/001.mdx
+++ b/events/2025/01/28/001.mdx
@@ -7,6 +7,6 @@ dateRange: ["2025-01-29"]
 
 <!--- content start --->
 
-Jan 29 . 2025 – Chinese New Year
+Jan 29, 2025 – Chinese New Year
 
 <!--- content end --->
