--- a/events/2025/01/28/002.mdx
+++ b/events/2025/01/28/002.mdx
@@ -7,6 +7,6 @@ dateRange: [["2025-02-10", "2025-02-11"]]
 
 <!--- content start --->
 
-Feb 10-11. 2025 – Prelim Exam
+Feb 10–11, 2025 – Prelim Exam
 
 <!--- content end --->
