--- a/events/2025/01/28/003.mdx
+++ b/events/2025/01/28/003.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "edsa-revolution-anniv"
-title: "Edsa Revolution Anniv"
+slug: "edsa-revolution-anniversary"
+title: "Edsa Revolution Anniversary"
 datePublished: "2025-01-28"
 dateRange: ["2025-02-25"]
 ---
 
 <!--- content start --->
 
-Feb 25, 2025 – EDSA Revolution Anniv
+Feb 25, 2025 – EDSA Revolution Anniversary
 
 <!--- content end --->
