--- a/events/2025/01/28/006.mdx
+++ b/events/2025/01/28/006.mdx
@@ -1,6 +1,6 @@
 ---
-slug: "college-week"
-title: "College Week"
+slug: "college-week-2025"
+title: "College Week 2025"
 datePublished: "2025-01-28"
 dateRange: [["2025-03-10", "2025-03-14"]]
 ---
