--- a/events/2025/01/28/011.mdx
+++ b/events/2025/01/28/011.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "final-exam-undergrad"
-title: "Final Exam-Undergrad"
+slug: "final-exam-undergraduate"
+title: "Final Exam - Undergraduate"
 datePublished: "2025-01-28"
 dateRange: [["2025-04-27", "2025-04-29"]]
 ---
 
 <!--- content start --->
 
-April 27-29, 2025 – Final Exam-undergrad
+April 27-29, 2025 – Final Exam Undergraduate
 
 <!--- content end --->
