--- a/events/2025/01/28/012.mdx
+++ b/events/2025/01/28/012.mdx
@@ -1,6 +1,6 @@
 ---
-slug: "graduation-shs"
-title: "Graduation Shs"
+slug: "senior-high-graduation-batch-2024-2025"
+title: "Senior High Graduation Batch 2024-2025"
 datePublished: "2025-01-28"
 dateRange: ["2025-05-02"]
 ---
