--- a/events/2025/01/28/015.mdx
+++ b/events/2025/01/28/015.mdx
@@ -1,12 +1,17 @@
 ---
-slug: "classes-begin-1st-sem-sy-2025-2026"
-title: "Classes Begin 1st Sem Sy 2025-2026"
+slug: "goldenstate-college-33rd-commencement-exercises"
+title: "Goldenstate College 33rd Commencement Exercises"
 datePublished: "2025-01-28"
-dateRange: ["2025-06-25"]
+dateRange: ["2025-05-07"]
 ---
 
 <!--- content start --->
 
-June 25, 2025 – Classes Begin 1st Sem SY 2025-2026
+Goldenstate College 33rd Commencement Exercises
+
+📍 Location: Lagao Campus
+🗓️ Date: May 7, 2025 (Wednesday)
+🕢 Time: 4:00 PM
+👥 Expected Participants: 2,000+
 
 <!--- content end --->
