--- a/events/2020/03/02/001.mdx
+++ b/events/2020/03/02/001.mdx
@@ -1,22 +1,12 @@
 ---
-slug: "college-fair"
-title: "College Fair"
+slug: "medical-educator-day-2020"
+title: "Medical Educator Day 2020"
 datePublished: "2020-03-02"
-dateRange: ["2020-03-14"]
+dateRange: [["2020-01-16", "2020-03-07"]]
 ---
 
 <!--- content start --->
 
-Tellus eget condimentum rhoncus
-
-Donec vitae sapien ut libero venenatis faucibus Maecenas tempus, tellus. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-
-EVENT INFO :
-Start Date:March 14, 2020
-Start Time:07:30
-End Date:March 14, 2020
-End Time:11:30
-Number of Participants:100
-Location:
+Jan 16 - March 7, 2020 – Medical Educator Day
 
 <!--- content end --->
