--- a/events/2024/08/14/006.mdx
+++ b/events/2024/08/14/006.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "goldenstate-college-gensan-buwan-ng-wika-culmination-program-lagao-campus"
-title: "Goldenstate College Gensan , Buwan Ng Wika Culmination Program , Lagao Campus"
+slug: "buwan-ng-wika-2024-culmination-program"
+title: "Buwan Ng Wika 2024 - Culmination Program"
 datePublished: "2024-08-14"
 dateRange: ["2024-08-30"]
 ---
 
 <!--- content start --->
 
-Aug. 30, 2024 – Goldenstate College Gensan – BUWAN NG WIKA CULMINATION PROGRAM – Lagao Campus
+Aug 30, 2024 – Buwan ng Wika 2024 - Culmination Program
 
 <!--- content end --->
