--- a/events/2024/10/29/004.mdx
+++ b/events/2024/10/29/004.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "8th-pin-investiture-white-coat-and-pinning-ceremony"
-title: "8th Pin Investiture White Coat and Pinning Ceremony"
+slug: "midterm-exam"
+title: "Midterm Exam"
 datePublished: "2024-10-29"
-dateRange: ["2024-10-04"]
+dateRange: [["2024-10-14", "2024-10-16"]]
 ---
 
 <!--- content start --->
 
-OCT. 04, 2024 – 8TH PIN INVESTITURE WHITE COAT AND PINNING CEREMONY
+Oct 14-16, 2024 – Midterm Exam
 
 <!--- content end --->
