--- a/events/2024/10/29/009.mdx
+++ b/events/2024/10/29/009.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "all-souls-day"
-title: "All Souls Day"
+slug: "back-to-school-office-return"
+title: "Back to School & Office Return"
 datePublished: "2024-10-29"
-dateRange: ["2024-11-02"]
+dateRange: ["2024-11-04"]
 ---
 
 <!--- content start --->
 
-NOV. 02, 2024 – ALL SOULS DAY
+Nov 4, 2024 – Back to School & Office Return
 
 <!--- content end --->
