--- a/events/2024/10/29/010.mdx
+++ b/events/2024/10/29/010.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "back-to-school-office-resume"
-title: "Back to School & Office Resume"
+slug: "intramurals-opening-parade-2024"
+title: "Intramurals Opening Parade 2024"
 datePublished: "2024-10-29"
-dateRange: ["2024-11-04"]
+dateRange: ["2024-11-08"]
 ---
 
 <!--- content start --->
 
-NOV. 04, 2024 – BACK TO SCHOOL & OFFICE RESUME
+Nov 8, 2024 – Intramurals Opening Parade 2024
 
 <!--- content end --->
