--- a/events/2025/01/28/009.mdx
+++ b/events/2025/01/28/009.mdx
@@ -1,12 +1,12 @@
 ---
 slug: "final-exam-graduating"
-title: "Final Exam-Graduating"
+title: "Final Exam - Graduating"
 datePublished: "2025-01-28"
 dateRange: [["2025-04-10", "2025-04-12"]]
 ---
 
 <!--- content start --->
 
-April 10-12, 20025 – Final Exam-Graduating
+April 10-12, 2025 – Final Exam Graduating
 
 <!--- content end --->
