--- a/events/2025/01/28/013.mdx
+++ b/events/2025/01/28/013.mdx
@@ -1,6 +1,6 @@
 ---
-slug: "graduation-college"
-title: "Graduation College"
+slug: "college-graduation-batch-2024-2025"
+title: "College Graduation Batch 2024-2025"
 datePublished: "2025-01-28"
 dateRange: ["2025-05-03"]
 ---
