--- a/events/2025/01/28/014.mdx
+++ b/events/2025/01/28/014.mdx
@@ -1,12 +1,12 @@
 ---
-slug: "enrollment-period-first-sem-sy-2025-2026"
-title: "Enrollment Period First Sem Sy 2025-2026"
+slug: "enrollment-first-semester-2025-2026"
+title: "Enrollment First Semester 2025-2026"
 datePublished: "2025-01-28"
-dateRange: [["2025-06-02", "2025-06-24"]]
+dateRange: [["2025-05-02", "2025-05-31"], ["2025-06-02", "2025-06-24"]]
 ---
 
 <!--- content start --->
 
-June 2-24, 2025 – Enrollment Period First Sem SY 2025-2026
+May 2-31, June 2-24 2025 – Enrollment First Semester SY 2025-2026
 
 <!--- content end --->
