--- a/events/2020/03/02/002.mdx
+++ b/events/2020/03/02/002.mdx
@@ -1,12 +1,17 @@
 ---
-slug: "pgs-2-culmination-night-2020"
-title: "Pgs 2 Culmination Night 2020"
+slug: "goldenstate-college-jobs-fair-2020"
+title: "Goldenstate College Jobs Fair 2020"
 datePublished: "2020-03-02"
-dateRange: []
+dateRange: ["2020-03-06"]
 ---
 
 <!--- content start --->
 
-March 4, 2020 – PGS 2 Culmination Night 2020
+Goldenstate College Jobs Fair 2020
+
+📍 Venue: KCC Convention Center
+📅 Date: March 6, 2020 (Saturday)
+🕢 Time: 7:30 AM – 5:30 PM
+👥 Expected Participants: 2,000+
 
 <!--- content end --->
