--- a/events/2020/03/02/003.mdx
+++ b/events/2020/03/02/003.mdx
@@ -1,16 +1,16 @@
 ---
-slug: "goldenstate-college-jobs-fair-2020"
-title: "Goldenstate College Jobs Fair 2020"
+slug: "goldenstate-college-22nd-commencement-exercises"
+title: "Goldenstate College 22nd Commencement Exercises"
 datePublished: "2020-03-02"
-dateRange: ["2020-03-06"]
+dateRange: ["2020-03-14"]
 ---
 
 <!--- content start --->
 
-Goldenstate College Jobs Fair 2020
+Goldenstate College 22nd Commencement Exercises
 
-📍 Venue: KCC Convention Center
-📅 Date: March 6, 2020 (Saturday)
+📍 Location: Lagao Gymnasium
+🗓️ Date: March 14, 2020 (Saturday)
 🕢 Time: 7:30 AM – 5:30 PM
 👥 Expected Participants: 2,000+
 
