--- a/events/2020/03/02/004.mdx
+++ b/events/2020/03/02/004.mdx
@@ -1,17 +1,12 @@
 ---
-slug: "goldenstate-college-22nd-commencement-exercises"
-title: "Goldenstate College 22nd Commencement Exercises"
+slug: "pgs-2-culmination-night-2020"
+title: "Pgs 2 Culmination Night 2020"
 datePublished: "2020-03-02"
-dateRange: ["2020-03-14"]
+dateRange: ["2020-04-04"]
 ---
 
 <!--- content start --->
 
-Goldenstate College 22nd Commencement Exercises
-
-📍 Location: Lagao Gymnasium
-🗓️ Date: March 14, 2020 (Saturday)
-🕢 Time: 7:30 AM – 5:30 PM
-👥 Expected Participants: 2,000+
+April 4, 2020 – PGS 2 Culmination Night 2020
 
 <!--- content end --->
